fixed more spacing errors found with practicum submission warnings

--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -21,7 +21,7 @@
 }
 
 .menu__subtitle {
-    font-family: Noto Serif;
+    font-family: Noto serif;
     font-size: 20px;
     line-height: 30px;
     max-width: 780px;
