--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -18,7 +18,7 @@
 }
 
 .recipes__subtitle {
-    font-family: Noto Serif;
+    font-family: Noto serif;
     font-size: 20px;
     line-height: 30px;
     max-width: 438px;
